# nerve

./: Cargo.toml  README.md
src/: args.rs  logging.rs  main.rs
src/functions/: base.rs  browsers.rs  code.rs  communication.rs  desktops.rs  displaymanagers.rs  displaymangers.rs  filemanagers.rs  git.rs  ide.rs  mod.rs  partition.rs  password.rs  shells.rs  terminals.rs  unakite.rs  users.rs
src/internal/: config.rs  files.rs  hardware.rs  install.rs  mod.rs  secure.rs  services.rs
