[package]
name = "nerve"
description = "The new installer for Snigdha OS, contains backend and TUI"
version = "1.2.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "snigdhaos-nerve"
path = "src/main.rs"

[dependencies]
clap = {version = "3.1.10", features = ["derive"] }
serde_json = "1.0.59"
serde = { version = "1.0.117", features = [ "derive" ] }
log = "0.4.16"
flexi_logger = {version = "0.22.3", features = ["colors"] }
lazy_static = "1.4.0"
human-panic = "1.0.3"
