[package]
name = "nerve"
description = "The new installer for Snigdha linux, contains backend and TUI"
#authors = ["Amy <axtlos@getcryst.al>"]
version = "1.2.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "snigdhaos-nerve"
path = "src/main.rs"

[dependencies]
clap = {version = "4.4.16", features = ["derive"] }
serde_json = "1.0.59"
serde = { version = "1.0.117", features = [ "derive" ] }
log = "0.4.16"
flexi_logger = {version = "0.27.3", features = ["colors"] }
lazy_static = "1.4.0"
human-panic = "1.0.3"
