[package]
name = "snigdhaos-nerve"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "snigdhaos-nerve"
path = "src/main.rs"

[dependencies]
clap = {version = "4.4.16", features = ["derive"] }
serde_json = "1.0.59"
serde = { version = "1.0.117", features = [ "derive" ] }
toml = "0.8.8"
log = "0.4.20"
flexi_logger = {version = "0.27.3", features = ["colors"] }
human-panic = "1.2.3"
regex = "1.10.2"
